# aisp-open-core

./: .gitignore  Cargo.toml  DEPLOYMENT_APPROVAL.md  FORMAL_METHODS_IMPLEMENTATION_PLAN.md  Makefile  PRODUCTION_READINESS.md  PURE_RUST_DESIGN.md  README.md  VERIFICATION_SUCCESS_REPORT.md  Z3_INTEGRATION_SUCCESS_REPORT.md  analysis_of_formal_verification_capabilities.md  basic_test.aisp  demo_simple.py  formal-verification.just  formal_verification_challenge.aisp  formal_verification_correct.aisp  formal_verification_test_correct.aisp  justfile  mathematical_formal_test.aisp  minimal_test.aisp  reference_verification_test.rs  run_comprehensive_tests.sh  setup_z3_env.sh  simple_test.aisp  soundness_completeness_analysis.md  stress_test_challenge.aisp  test_document.aisp  test_reference_formal.aisp  test_simple_verification.aisp  test_working_api.rs  test_z3  test_z3_integration.rs  verification_demo_final.sh  working_mathematical_test.aisp
aisp-formal-verification/crates/aisp-core/: Cargo.toml
aisp-formal-verification/crates/aisp-core/src/: anti_drift.rs  concurrent_behavior_verifier.rs  constraint_solver.rs  enhanced_z3_verification.rs  evidence_parser.rs  formal_semantics.rs  formal_verification.rs  formula_converter.rs  ghost_intent_validation.rs  hebbian_learning.rs  invariant_analyzer.rs  invariant_discovery.rs  invariant_discovery_main.rs  lib.rs  meta_parser.rs  parser_new.rs  property_extractor.rs  property_factory.rs  protocol_state_machine.rs  reference_integration_test.rs  reference_validator.rs  relational_new.rs  rossnet_scoring.rs  semantic.rs  temporal_logic_solver.rs  temporal_new.rs  temporal_operator_analyzer.rs  theorem_prover.rs  tri_vector_validation.rs  types_parser.rs  validator.rs  z3_integration.rs
aisp-formal-verification/crates/aisp-core/tests/: end_to_end_validation.rs  formal_specification_validation.rs  formal_verification_integration.rs  formal_verification_integration_fixed.rs  formal_verification_simple.rs  invariant_discovery_integration.rs  parser_integration.rs  semantic_integration.rs  simple_integration.rs  temporal_integration.rs
aisp-rust-pure/crates/aisp-core/: Cargo.toml
aisp-rust-pure/crates/aisp-core/src/: ast.rs  axiom_system.rs  bisimulation_theory.rs  completeness_analysis.rs  conflict_detector.rs  conflict_types.rs  constraint_solver.rs  dependency_analyzer.rs  error.rs  evidence_parser.rs  formal_semantics.rs  formal_verification.rs  formula_converter.rs  header_parser.rs  invariant_analyzer.rs  invariant_discovery.rs  invariant_discovery_main.rs  invariant_exporters.rs  invariant_formulas.rs  lib.rs  logic_parser.rs  mathematical_semantics.rs  meta_parser.rs  model_checker.rs  parser.rs  parser_new.rs  performance_constraint_verifier.rs  proof_search.rs  proof_types.rs  property_extractor.rs  property_extractor_main.rs  property_factory.rs  property_types.rs  protocol_state_machine.rs  quality_analyzer.rs  relational.rs  relational_new.rs  resource_utilization_analyzer.rs  satisfiability_checker.rs  semantic.rs  (+18 more)
aisp-rust-pure/crates/aisp-core/tests/: end_to_end_validation.rs  formal_integration_simple.rs  formal_verification_integration.rs  implementation_validation.rs  invariant_discovery_integration.rs  parser_integration.rs  relational_integration.rs  satisfiability_integration.rs  semantic_integration.rs  simple_integration.rs  temporal_integration.rs
archive/aisp-rust/: Cargo.toml  PUBLISHING.md  README.md
archive/aisp-rust/src/: lib.rs  streaming.rs  symbol.rs  tier.rs  validate.rs  z3_validation.rs
core/: Cargo.toml  build_container.sh  libconflict_types.rlib  libproperty_types.rlib  libsmt_types.rlib  libtypes.rlib  simple_test.aisp  simple_validation_test.aisp  test_document.aisp  trivector_test.aisp  working_test.aisp
core/crates/aisp-cli/: Cargo.toml
core/crates/aisp-core/: Cargo.toml  build.rs
core/crates/aisp-core/examples/: trivector_demo.rs
core/crates/aisp-core/src/: advanced_theorem_prover.rs  anti_drift.rs  ast.rs  batch_verification.rs  category_theory_verifier.rs  completeness_analysis.rs  compositional_proof_chain.rs  conflict_detector.rs  constraint_solver.rs  core_features.rs  empirical_completeness.rs  enhanced_z3_verification.rs  error.rs  formula_converter.rs  ghost_intent_search.rs  ghost_intent_validation.rs  header_parser.rs  hebbian_learning.rs  incompleteness_handler.rs  invariant_analyzer.rs  invariant_discovery.rs  invariant_discovery_main.rs  invariant_exporters.rs  invariant_types.rs  lexer.rs  lib.rs  logic_parser.rs  mathematical_evaluator.rs  mathematical_notation_parser.rs  mathematical_semantics.rs  mechanized_proofs.rs  model_checker.rs  parser_new.rs  performance_guarantees.rs  pocket_architecture.rs  property_extractor.rs  property_types.rs  protocol_state_machine.rs  reference_integration_test.rs  resource_utilization_analyzer.rs  (+16 more)
core/crates/aisp-core/tests/: formal_integration_simple.rs  formal_verification_comprehensive.rs  formal_verification_simple.rs  (+16 more)
core/docs/: ADR-009-formal-verification-architecture.md  ADR-010-invariant-discovery-system.md  ADR-011-satisfiability-checking-system.md  REFERENCE_VALIDATION_ANALYSIS.md
core/docs/adr/: 001-pure-rust-architecture.md  002-formal-methods-framework.md  003-rocq-integration.md  004-modular-srp-architecture.md  005-z3-native-integration.md  006-garden-inspired-verification.md  007-production-ready-cleanup.md  008-formal-specification-validation.md  009-property-based-testing.md  010-property-based-formal-verification.md  013-complete-formal-verification-implementation.md  014-tri-vector-signal-validation.md  016-modular-z3-verification-architecture.md  020-reference-md-formal-verification-challenge.md  021-test-compilation-errors-remediation.md  023-deep-verification-architecture-for-semantic-security.md  027-canonical-ast-architecture-completion.md  029-production-ready-architecture-completion.md  030-z3-requirement-strategy.md  031-z3-canonical-architecture-and-cli-remediation.md  README.md
core/tests/: reference_challenge_test.rs
tools/validator/wasm/: .gitignore  Cargo.toml  aisp.h  aisp.wasm  build.sh
(+274 files in other folders)
