[workspace]
members = [
    "crates/aisp-core",
    "crates/aisp-cli",
]
resolver = "2"

# Workspace package defaults
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AISP Development Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bar181/aisp-open-core"
homepage = "https://github.com/bar181/aisp-open-core"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

# CLI dependencies  
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"

# Analysis dependencies
petgraph = "0.6"    # For dependency graphs
chrono = "0.4"      # For timing analysis
uuid = { version = "1.0", features = ["v4"] }  # For proof certificate IDs

# Optional Z3 bindings (defined in individual crates)
# z3 = { version = "0.11", optional = true }  # Commented out as workspace deps cannot be optional

# Additional dependencies for testing
proptest = "1.0"
assert_cmd = "2.0"  # For CLI testing

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1