[package]
name = "aisp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true  
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core AISP parsing and validation engine"

[features]
# Default minimal build for development/testing
default = ["std", "serde"]
# Minimal build without Z3 for development/testing
minimal = ["std"]
# Full verification with Z3
verification = ["std", "serde", "z3-verification"]
std = []
serde = ["dep:serde"] 
z3-verification = ["dep:z3"]
z3-static = ["z3-verification"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true
z3 = { version = "0.11", optional = true }
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
proptest.workspace = true

[[example]]
name = "trivector_demo"
path = "examples/trivector_demo.rs"