[package]
name = "aisp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true  
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core AISP parsing and validation engine"

[features]
# Default build with MANDATORY Z3 verification (strict security)
default = ["verification"]
# DEPRECATED: Use default instead (minimal builds no longer supported)
minimal = ["std"] 
# Full verification with Z3 (now the default)
verification = ["std", "serde", "z3-verification", "regex", "unicode-normalization"]
# Security hardening features
security = ["regex", "unicode-normalization"]
std = []
serde = ["dep:serde"] 
z3-verification = ["dep:z3"]
z3-static = ["z3-verification"]
regex = ["dep:regex"]
unicode-normalization = ["dep:unicode-normalization"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true
z3 = { version = "0.11", optional = true }
uuid.workspace = true
pest = "2.7"
pest_derive = "2.7"
regex = { version = "1.10", optional = true }
unicode-normalization = { version = "0.1", optional = true }

[build-dependencies]
pest_generator = "2.7"

[dev-dependencies]
tokio.workspace = true
proptest.workspace = true

[[example]]
name = "trivector_demo"
path = "examples/trivector_demo.rs"