[package]
name = "aisp-core"
version = "0.1.0"
edition = "2021"
authors = ["AISP Development Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bar181/aisp-open-core"
homepage = "https://github.com/bar181/aisp-open-core"
description = "Core AISP parsing and validation engine"

[features]
default = ["std", "serde"]
std = []
serde = ["dep:serde"] 
z3-verification = ["dep:z3"]
z3-static = ["z3-verification"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
z3 = { version = "0.12", optional = true }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
proptest = "1.4"