[package]
name = "aisp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for AISP validation and analysis"

[features]
# Default CLI with MANDATORY Z3 verification (production-ready)
default = ["z3-verification"]
z3-verification = ["aisp-core/z3-verification"]

[[bin]]
name = "run_verification"
path = "src/bin/run_verification.rs"

[dependencies]
aisp-core = { path = "../aisp-core" }
clap = { workspace = true, features = ["derive", "color"] }
serde.workspace = true
serde_json = "1.0"
tokio.workspace = true
colored.workspace = true
indicatif.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.0"
assert_cmd.workspace = true
predicates = "3.0"

# Inherit workspace-wide lint configuration
[lints]
workspace = true