[package]
name = "aisp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true  
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core AISP parsing and validation engine"

[features]
# Default build with MANDATORY Z3 verification (production-ready)
default = ["verification"]
# Minimal build with essential features only (DEPRECATED)
minimal = ["std"] 
# Full verification with Z3 (now the default)
verification = ["std", "serde", "z3-verification", "regex", "unicode-normalization"]
# Full verification alias for backward compatibility
full = ["verification"]
# Security hardening features
security = ["regex", "unicode-normalization"]
std = []
serde = ["dep:serde"] 
z3-verification = ["dep:z3"]
z3-static = ["z3-verification"]
regex = ["dep:regex"]
unicode-normalization = ["dep:unicode-normalization"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true
z3 = { version = "0.19.7", optional = true }
uuid.workspace = true
pest = "2.7"
pest_derive = "2.7"
regex = { version = "1.10", optional = true }
unicode-normalization = { version = "0.1", optional = true }

[build-dependencies]
pest_generator = "2.7"

[dev-dependencies]
tokio.workspace = true
proptest.workspace = true

# Test configuration
[package.metadata.cargo-test-args]
test-threads = 1  # For Z3 tests that might conflict
timeout = 120     # 2 minute timeout
nocapture = false # Capture output by default

# Lint configuration handled in .cargo/config.toml

# Test targets
[[test]]
name = "integration_comprehensive"
path = "tests/integration_comprehensive.rs"

[[test]]  
name = "performance_benchmarks"
path = "tests/performance_benchmarks.rs"
required-features = ["verification"]

[[test]]
name = "security_regression"
path = "tests/security_regression.rs"
required-features = ["security"]

[[example]]
name = "trivector_demo"
path = "examples/trivector_demo.rs"